--- a/css/home-portfolio2.css
+++ b/css/home-portfolio2.css
@@ -12,6 +12,12 @@
     background-attachment: fixed;
 }
 
+@media only screen and (max-width: 760px){
+    .parallax1 {
+        display: none;
+    }
+}
+
 /*navigation bar*/
 
 nav {
@@ -233,7 +239,7 @@ header i {
 main {
     width: 100%;
     height: 100%;
-    background-color: transparent;
+    background-color: rgb(26, 26, 26);
     overflow-x: hidden;
 }
 
@@ -259,10 +265,10 @@ main {
     display: flex;
     flex-flow: row;
     justify-content: start;
-    width: 100%;
-    height: 100%;
+    width: 960px;
+    height: calc(100vh - 100px);
     margin: 0px auto;
-    padding: 120px 100px 100px 100px;
+    padding: 120px 0px 0px 0px;
     background-color: rgb(26, 26, 26);
 }
 
@@ -271,7 +277,7 @@ main {
     height: 500px;
     background-color: orange;
     position: relative;
-    margin-right: 400px;
+    margin-right: 200px;
 }
 
 .about-me-photo {
@@ -310,9 +316,9 @@ main {
 .about-me-description p {
     color: white;
     font-family:'raleway';
-    font-size: 12px;
+    font-size: 15px;
     line-height: 20px;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     text-align: justify;
 }
 
@@ -372,13 +378,164 @@ main {
     }
 }
 
+/* my skills */
+
+#my-skills {
+    display: flex;
+    flex-flow: row;
+    justify-content: start;
+    width: 960px;
+    height: calc(100vh - 100px);
+    margin: 0px auto;
+    padding: 120px 0px 0px 0px;
+    background-color: rgb(26, 26, 26);
+}
+
+.my-study {
+    width: 400px;
+    height: 100%;
+    margin-right: 50px;
+}
+
+.my-study h1 {
+    color: orange;
+    font-family: 'raleway';
+    font-size: 50px;
+    margin-bottom: 20px;
+}
+
+.my-study p {
+    font-family: 'raleway';
+    font-size: 15px;
+    color: white;
+    line-height: 20px;
+    letter-spacing: 1px;
+    text-align: justify;
+}
+
+
+
+.skills-list {
+    width: 400px;
+    height: 100px;
+}
+
+.my-skills h1 {
+    font-family: 'raleway';
+    font-size: 50px;
+    color: white;
+    margin-bottom: 20px;
+}
+
+.my-skills span {
+    color: orange;
+}
+
+.skill-container {
+    width: 500px;
+    height: 20px;
+    background-color: white;
+    position: relative;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+
+.skills-list p {
+    color: white;
+    font-family: 'raleway';
+    font-size: 15px;
+    margin-bottom: 10px;
+}
+
+
+.html5 {
+    width: 350px;
+    height: 20px;
+    background-color: orange;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    border-radius: 5px 0px 0px 5px;
+}
+
+.html5 p {
+    color: white;
+    font-family: 'raleway';
+    margin-left: 10px;
+}
+
+.css3 {
+    width: 330px;
+    height: 20px;
+    background-color: orange;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    border-radius: 5px 0px 0px 5px;
+}
+
+.css3 p {
+    color: white;
+    font-family: 'raleway';
+    margin-left: 10px;
+}
+
+.javascript {
+    width: 200px;
+    height: 20px;
+    background-color: orange;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    border-radius: 5px 0px 0px 5px;
+}
+
+.javascript p {
+    color: white;
+    font-family: 'raleway';
+    margin-left: 10px;
+}
+
+.jquery {
+    width: 180px;
+    height: 20px;
+    background-color: orange;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    border-radius: 5px 0px 0px 5px;
+}
+
+.jquery p {
+    color: white;
+    font-family: 'raleway';
+    margin-left: 10px;
+}
+
+.bootstrap4 {
+    width: 250px;
+    height: 20px;
+    background-color: orange;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    border-radius: 5px 0px 0px 5px;
+}
+
+.bootstrap4 p {
+    color: white;
+    font-family: 'raleway';
+    margin-left: 10px;
+}
+
+
 /* contact */
 
 #contact {
-    width: 100%;
-    height: 100vh;
+    width: 960px;
+    height: calc(100vh - 100px);
     margin: 0px auto;
-    padding: 120px 0px 100px 0px;
+    padding: 120px 0px 0px 0px;
     background-color: rgb(26, 26, 26);
     display: flex;
     flex-flow: column;
@@ -443,6 +600,8 @@ main {
         flex-flow: column;
         justify-content: center;
         align-items: center;
+        width: auto;
+        height: auto;
     }
 
     .social-media {
